--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "module",
   "homepage": "https://github.com/SmorodinVik/OnPointTest#readme",
   "devDependencies": {
+    "@babel/preset-react": "^7.16.0",
     "@webpack-cli/generators": "^2.4.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -40,6 +41,8 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "style-loader": "^3.3.1"
   }
 }
