--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "type": "module",
   "homepage": "https://github.com/SmorodinVik/OnPointTest#readme",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "@webpack-cli/generators": "^1.1.0",
-    "babel-cli": "^6.26.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.25.3",
