--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,10 @@
         "es2021": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb"
+        "eslint:recommended",
+        "plugin:react/recommended"
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -18,5 +19,6 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": 0
     }
 }
